syntax = "proto3";

package securemsg;

option go_package = "github.com/bajacc/tinescale/pkg/securemsg";

message MessageWrapper {
    oneof message_type {
        EndpointRequest endpoint_request = 1;
        EndpointResponse endpoint_response = 2;
        ToRelayMessage to_relay = 3;
        FromRelayMessage from_relay = 4;
        PingMessage ping_message = 5;
        PongMessage pong_message = 6;
    }
}


message Address {
    bytes ip = 1;
    uint32 port = 2;    // uint32 to match Go's uint16, protobuf doesn't have uint16
}

message EndpointRequest {
    uint32 request_id = 1;
}

message EndpointResponse {
    uint32 request_id = 1;
    repeated Address addresses = 2;
}

message ToRelayMessage {
    bytes dst_key = 1;
    bytes src_key = 2;
    bytes data = 3;
}

message FromRelayMessage {
    bytes dst_key = 1;
    bytes src_key = 2;
    bytes data = 3;
}

message PingMessage {
    uint32 nonce = 1; // 4-byte nonce
}

message PongMessage {
    uint32 nonce = 1; // 4-byte nonce
}